objects/Training_PS__c/Training_PS__c.object-meta.xml
<CustomObject>
    <label>Training &amp; PS</label>
    <nameField>
        <displayFormat>TPS - {00000}</displayFormat>
        <label>Training &amp; PS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training &amp; PS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>