objects/Training_PS__c/fields/Absorb_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Absorb_Transaction_ID__c</fullName>
    <description>INC0154189
To be carried over from Absorb Opportunities</description>
    <label>Absorb Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>