objects/Training_PS__c/fields/Account_owner_lu__c.field-meta.xml
<CustomField>
    <fullName>Account_owner_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_PS</relationshipName>
    <type>Lookup</type>
</CustomField>