objects/Training_PS__c/fields/Business_justification__c.field-meta.xml
<CustomField>
    <fullName>Business_justification__c</fullName>
    <inlineHelpText>It is preferable to have the Training scheduled PRIOR to requesting the NEW extension date</inlineHelpText>
    <label>Business justification (255 Chars)</label>
    <type>TextArea</type>
</CustomField>