objects/Training_PS__c/fields/CSM_Account_Owner_LU__c.field-meta.xml
<CustomField>
    <fullName>CSM_Account_Owner_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field updated by flow Insert Training &amp; PS record with Lookup to Quote</description>
    <label>CSM Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_PS2</relationshipName>
    <type>Lookup</type>
</CustomField>