objects/Training_PS__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer point of contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training &amp; PS</relationshipLabel>
    <relationshipName>Training_PS</relationshipName>
    <type>Lookup</type>
</CustomField>