objects/Training_PS__c/fields/Days_Until_Training_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Training_End_Date__c</fullName>
    <description>Used in Training &amp; PS available training and expiration Email templates</description>
    <formula>Training_End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Training End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>