objects/Training_PS__c/fields/End_Date_Extension_Request__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Extension_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Date Extension Request</label>
    <type>Checkbox</type>
</CustomField>