objects/Training_PS__c/fields/Extension_Counter__c.field-meta.xml
<CustomField>
    <fullName>Extension_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Extension Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>