objects/Training_PS__c/fields/Formatted_Training_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Training_End_Date__c</fullName>
    <description>Formatted Training End Date</description>
    <formula>CASE(
  MONTH(Training_End_Date__c),
  1, &quot;January&quot;,
  2, &quot;February&quot;,
  3, &quot;March&quot;,
  4, &quot;April&quot;,
  5, &quot;May&quot;,
  6, &quot;June&quot;,
  7, &quot;July&quot;,
  8, &quot;August&quot;,
  9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  &quot;December&quot;
)

&amp; &quot; &quot; &amp; TEXT(DAY(Training_End_Date__c)) &amp; &quot;, &quot; &amp; TEXT(YEAR(Training_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formatted Training End Date</inlineHelpText>
    <label>Formatted Training End Date</label>
    <type>Text</type>
</CustomField>