objects/Training_PS__c/fields/Missing_for_Approval_Submission__c.field-meta.xml
<CustomField>
    <fullName>Missing_for_Approval_Submission__c</fullName>
    <formula>IF(!ISBLANK(New_Training_End_Date__c),&quot;&quot;,&quot;New Training End Date ;&quot;) &amp; 
IF(!ISBLANK(Customer_Contact__c),&quot;&quot;,&quot;Customer Contact&quot;)&amp;
IF(!ISBLANK(Business_justification__c),&quot;&quot;,&quot;Business Justification&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing for Approval Submission</label>
    <type>Text</type>
</CustomField>