objects/Training_PS__c/fields/New_Training_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Training_End_Date__c</fullName>
    <description>This field is manually filled and cannot be more than 90 Days than Training End Date. Following Approval, this field&apos;s value is filled in &quot;Training End Date&quot; Field.</description>
    <label>New Training End Date</label>
    <type>Date</type>
</CustomField>