objects/Training_PS__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Training &amp; PS</relationshipLabel>
    <relationshipName>Training_PS</relationshipName>
    <type>Lookup</type>
</CustomField>