objects/Training_PS__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Replace existing Product Lookup(Product) field to create a direct relationship to the product that created the record.</description>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Training &amp; PS</relationshipLabel>
    <relationshipName>Training_PS</relationshipName>
    <type>Lookup</type>
</CustomField>