objects/Training_PS__c/fields/Opportunity_Product_Bundled__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Bundled__c</fullName>
    <description>Field used by Training Team to identify if the training record is tied to a bundle component</description>
    <formula>Opportunity_Product__r.SBQQ_Bundled__c</formula>
    <label>Opportunity Product Bundled</label>
    <type>Checkbox</type>
</CustomField>