objects/Training_PS__c/fields/TAM_Owner_lu__c.field-meta.xml
<CustomField>
    <fullName>TAM_Owner_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_PS1</relationshipName>
    <type>Lookup</type>
</CustomField>