objects/Training_PS__c/fields/Training_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Delivery_Type__c</fullName>
    <description>Field also added to Product and Quote Line 
Auto populate based on sku type</description>
    <label>Training Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instructor-Led Training (ILT)</fullName>
            </value>
            <value>
                <fullName>Web-Based Training (WBT)</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>Virtual Instructor-Led Training (vILT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>