objects/Training_PS__c/fields/Training_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_End_Date__c</fullName>
    <description>This field will be filled in by WFR: Update Training End Date</description>
    <label>Training End Date</label>
    <type>Date</type>
</CustomField>