objects/Training_PS__c/fields/WBT_TrainingPS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>WBT_TrainingPS_Start_Date__c</fullName>
    <description>Filled in by Flow &quot;Insert Web Based Training and PS record&quot; from Quote if filled in. Editable for Training Team</description>
    <label>WBT Start Date</label>
    <type>Date</type>
</CustomField>