objects/Training_PS__c/fields/X18ID__c.field-meta.xml
<CustomField>
    <fullName>X18ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X18ID</label>
    <type>Text</type>
</CustomField>