objects/Training_PS__c/recordTypes/ILT_PS_Record.recordType-meta.xml
<RecordType>
    <fullName>ILT_PS_Record</fullName>
    <active>true</active>
    <label>ILT &amp; PS Record</label>
</RecordType>