objects/Training_PS__c/recordTypes/vILT_PS_Record.recordType-meta.xml
<RecordType>
    <fullName>vILT_PS_Record</fullName>
    <active>true</active>
    <description>Virtual Instructor-Led Training (vILT)</description>
    <label>vILT &amp; PS Record</label>
</RecordType>