objects/Training_PS__c/recordTypes/WBT_PS_Record.recordType-meta.xml
<RecordType>
    <fullName>WBT_PS_Record</fullName>
    <active>true</active>
    <description>WBT &amp; PS Record</description>
    <label>WBT &amp; PS Record</label>
</RecordType>