objects/Training_PS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Training_End_Date__c</columns>
    <columns>Training_Status__c</columns>
    <columns>Opportunity_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>