objects/Training_PS__c/listViews/Recently_Viewed_Training_PS.listView-meta.xml
<ListView>
    <fullName>Recently_Viewed_Training_PS</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Close_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Training_End_Date__c</columns>
    <columns>New_Training_End_Date__c</columns>
    <columns>Formatted_Training_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/13/2023 12:00 AM</value>
    </filters>
    <label>Recently Viewed Training &amp; PS</label>
    <language>en_US</language>
</ListView>